--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
     integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
     crossorigin="anonymous" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
   <title>Travel</title>
@@ -65,7 +66,7 @@
       type="video/mp4" class="embed-responsive"></video> -->
       <img src="compressed/pexels-photo-2825237.jpeg" alt="" class="img-fluid">
       
-    <div class="container-fluid home__content" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="2000">
+    <div class="container-fluid home__content" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="2000">
       <div class="col-md-5  col-12" >
         <h2 class="home__title "><span>Never Stop Exploring</span><br><span>This Unusual World</span></h2>
         <p class="home__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid consectetur est
@@ -87,7 +88,7 @@
         <div class="col-md-7 col-12 my-2">
           <img src="./compressed/Around the world.gif" class="img-fluid">
         </div>
-        <div class="col-md-5 col-12 my-2"  >
+        <div class="col-md-5 col-12 my-2"  data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="400">
           <h2>Explore Best in Travel 2021
           </h2>
           <p class="text-justify text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eius, eos esse
@@ -113,19 +114,19 @@
         <div class="col-12">
           <ul class="nav nav-tabs pt-4 mb-2" id="myTab" role="tablist"
             style="display: flex;  align-items: center; justify-content: center;">
-            <li class="nav-item my-1" >
+            <li class="nav-item my-1" data-aos="flip-right"  data-oas-duration="2000" data-aos-delay="300">
               <a class="nav-link active show" id="home-tab" data-toggle="tab" href="#home" role="tab"
                 aria-controls="home" aria-selected="true"><i class="fas fa-plane fa-rotate-270"></i>&nbsp; Flight</a>
             </li>
-            <li class="nav-item mx-2 my-1">
+            <li class="nav-item mx-2 my-1" data-aos="flip-right"  data-oas-duration="2000" data-aos-delay="500">
               <a class="nav-link " id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
                 aria-selected="false"><i class="fas fa-hotel"></i>&nbsp; Hotel</a>
             </li>
-            <li class="nav-item mr-2 my-1" >
+            <li class="nav-item mr-2 my-1" data-aos="flip-right"  data-oas-duration="2000" data-aos-delay="700">
               <a class="nav-link" id="messages-tab" data-toggle="tab" href="#messages" role="tab"
                 aria-controls="messages" aria-selected="false"> <i class="fas fa-car"></i>&nbsp; Car Rent</a>
             </li>
-            <li class="nav-item my-1"  data-aos="flip-right">
+            <li class="nav-item my-1" data-aos="flip-right"  data-oas-duration="2000" data-aos-delay="900">
               <a class="nav-link " id="settings-tab" data-toggle="tab" href="#settings" role="tab"
                 aria-controls="settings" aria-selected="false"><i class="fas fa-ship"></i>&nbsp; Cruise</a>
             </li>
@@ -136,7 +137,7 @@
 
     <!-- Tab panes -->
 
-    <div class="container-fluid p-4 mb-5" style="background-color: #0D1316">
+    <div class="container-fluid p-4 mb-5" style="background-color: #0D1316" data-aos="zoom-out-up"   data-oas-duration="2000" data-aos-delay="1100">
       <div class="row py-5" style="display: flex; align-items: center;">
         <div class="col-12">
           <div class="tab-content">
@@ -325,7 +326,7 @@
       <div class="col-12 text-center  mb-4">
         <h2 class="title my-5">What Do We Guarantee ?</h2>
       </div>
-      <div class="col-md-3 col-sm-6 col-12 my-2"   >
+      <div class="col-md-3 col-sm-6 col-12 my-2"  data-aos="zoom-out-up"   data-oas-duration="2000" data-aos-delay="300"  >
         <div class="card card__decor">
           <img class="card-img-top w-50  mt-3 mb-1 mx-auto img__decor"
             src="compressed/airplane-flying-around-earth-grid (1).svg" alt="Card image ">
@@ -337,7 +338,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-12 my-2">
+      <div class="col-md-3 col-sm-6 col-12 my-2"  data-aos="zoom-out-up"   data-oas-duration="2000" data-aos-delay="500">
         <div class="card card__decor">
           <img class="card-img-top w-50  mt-3 mb-1 mx-auto img__decor" src="compressed/ship (1).svg">
           <div class="card-body text-center">
@@ -348,7 +349,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-12 my-2" >
+      <div class="col-md-3 col-sm-6 col-12 my-2"  data-aos="zoom-out-up"   data-oas-duration="2000" data-aos-delay="700">
         <div class="card card__decor">
           <img class="card-img-top w-50  mt-3 mb-1 mx-auto img__decor" src="./compressed/car (2).svg" alt="Card image ">
           <div class="card-body text-center">
@@ -359,7 +360,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-12 my-2" >
+      <div class="col-md-3 col-sm-6 col-12 my-2"   data-aos="zoom-out-up"   data-oas-duration="2000" data-aos-delay="900">
         <div class="card card__decor">
           <img class="card-img-top w-50  mt-3 mb-1 mx-auto img__decor" src="./compressed/customer-service (2).svg"
             alt="Card image ">
@@ -377,7 +378,7 @@
   <!--HOME END -->
   <!-- Nav tabs -->
   <div class="container-fluid my-5  py-md-4 px-5 " id="destination">
-    <div class="row" >
+    <div class="row"  data-aos="fade-up" data-oas-duration="2000" data-aos-delay="500" >
       <div class="col-12 text-center my-3">
         <h2 class="title my-5">Featured Destination</h2>
       </div>
@@ -1163,9 +1164,11 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <!-- Start files with bootstrap  END-->
   <script>
-
+    AOS.init();
     $('#myTab a').on('click', function (e) {
       e.preventDefault()
       $(this).tab('show')
@@ -1205,6 +1208,7 @@
       icon: "success",});
   }
 });
+
   });
   
   
